--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
+    "morgan": "^1.10.0",
     "rate-limiter": "^0.2.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
